--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^6.12.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "dotenv": "^16.3.1",
     "nodemon": "^3.0.1"
   }
